--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./gWVFiv/hero_1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h1>Welcome To Suites</h1>
               <p class="fs-6">HOTEL & RESORT</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./gWVFiv/hero_2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h1>Unique Experience</h1>
               <p class="fs-6">ENJOY WITH US</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./gWVFiv/hero_3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h1>Relaxing Room</h1>
               <p class="fs-6">YOUR ROOM, YOUR STAY</p>
             </div>
